# home-library

./: Makefile  README.md  docker-compose.yml  env.example  init.sql  main.py  pyproject.toml
src/home_library/: database.py  embeddings.py  epub_processor.py  main.py  models.py  search.py  settings.py  vectorizer.py
src/home_library/cli/: __init__.py  epub.py  migrate.py  search.py  show_settings.py  upload.py  vectorize.py
tests/: test_database.py  test_embeddings.py  test_epub_processor.py  test_main.py  test_models.py  test_search.py  test_settings.py  test_vectorizer.py
tests/cli/: test_epub.py  test_migrate.py  test_search.py  test_show_settings.py  test_upload.py  test_vectorize.py
