[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-library"
version = "0.1.0"
description = "A home library management system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[project.scripts]
home-library = "home_library.main:main"

# Configure hatchling to find packages in src/
[tool.hatch.build.targets.wheel]
packages = ["src/home_library"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

# Tool configurations
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"