[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-library"
version = "0.1.0"
description = "A home library management system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[project.scripts]
home-library = "home_library.main:main"
show-settings = "home_library.main:show_settings"

# Configure hatchling to find packages in src/
[tool.hatch.build.targets.wheel]
packages = ["src/home_library"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]

# Tool configurations
[tool.ruff]
src = ["src", "tests"]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache",
    ".svn", ".tox", ".venv", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F", "W", "B", "I", "N", "UP", "C4",
    "ICN", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET",
    "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA",
    "PGH", "PL", "TRY", "NPY", "RUF",
]
ignore = [
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2
known-first-party = ["home_library"]
